--- a/.github/workflows/share.yml
+++ b/.github/workflows/share.yml
@@ -8,24 +8,6 @@ on:
         required: false
         default: 'ubuntu-latest'
         type: string
-    secrets:
-      CYM_TOKEN:
-        required: false
-      SERVER_ADDR:
-        required: false
-      REMOTE_PORT:
-        required: false
-      REMOTE_PORT_V2:
-        required: false
-      LOCAL_PORT_N:
-        required: false
-      LOCAL_PORT_O:
-        required: false
-      USER:
-        required: false
-      EMAIL:
-        required: false
-
 jobs:
   ubuntu-job:
     runs-on: ${{ inputs.runs-on }}
@@ -50,11 +32,11 @@ jobs:
       - name:  middify root and runner user password
         run: |
           sh common/middify_password.sh
-      - name: mv /mnt/x86/bin/targets/x86/64/*.img.gz
+      - name: mv /mnt/r68s/bin/targets/rockchip/armv8/*.img.gz
         run: |
-          ls -l /mnt/x86/bin/targets/x86/64/
+          ls -l /mnt/r68s/bin/targets/rockchip/armv8/
           mkdir file
-          mv /mnt/x86/bin/targets/x86/64/*.img.gz file/
+          mv /mnt/r68s/bin/targets/rockchip/armv8/*.img.gz file/
           echo "###--------------------------------------------###"
           ls -lh
           cd file && ls -lh
@@ -62,22 +44,9 @@ jobs:
       - name: Upload release asset
         uses: svenstaro/upload-release-action@v2
         with:
-          repo_token: ${{ secrets.CYM_TOKEN }}
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
           tag: ${{ env.strDate }}
           file_glob: true
           overwrite: true
           release_name: ${{ env.strDate }} 自动发布
           file: file/*
-      - name: Update time fullDateTime
-        run: |
-          echo "fullDateTime=$(TZ=UTC-8 date '+%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
-      - name: Update time info to openwrt-auto-two
-        run: |
-          git clone https://${{ secrets.USER }}:${{ secrets.CYM_TOKEN }}@github.com/findnr/openwrt-auto-two.git
-          cd openwrt-auto-two
-          echo "${{ env.fullDateTime }}" > update.txt
-          git config --global user.email "${{ secrets.EMAIL }}"
-          git config --global user.name "${{ secrets.USER }}"
-          git add update.txt
-          git commit -m "Update time info: ${{ env.fullDateTime }}"
-          git push
