--- a/.github/workflows/share.yml
+++ b/.github/workflows/share.yml
@@ -16,6 +16,8 @@ jobs:
 
       - name: show user name
         run: |
+          pwd
+          ls -l
           whoami
           
       - name: show ubuntu version
