--- a/.github/workflows/share.yml
+++ b/.github/workflows/share.yml
@@ -8,6 +8,11 @@ on:
         required: false
         default: 'ubuntu-latest'
         type: string
+      secrets:
+        ZEROTIER_ID:
+          required: true
+        ZEROTIER_TOKEN:
+          required: true
 jobs:
   ubuntu-job:
     runs-on: ${{ inputs.runs-on }}
@@ -24,8 +29,11 @@ jobs:
         run: sudo cat /proc/version
 
       - name: install zerotier
+        env:
+          ZEROTIER_ID: ${{ secrets.ZEROTIER_ID }}
         run: |
           curl -s https://install.zerotier.com | sudo bash
+          sudo zerotier-cli join "$ZEROTIER_ID"
           
       - name: install tcl tk expect
         run: |
@@ -37,6 +45,30 @@ jobs:
       - name:  complite lede
         run: |
           sh r68s_auto.sh
+      - name:  delete network
+        env:
+          ZEROTIER_ID: ${{ secrets.ZEROTIER_ID }}
+          ZEROTIER_TOKEN: ${{ secrets.ZEROTIER_TOKEN }}
+        run: |
+          ip addr
+          partial_name="ztrf"
+          interfaces=$(ip addr show | grep -oP "(?<=: )$partial_name\S*")
+          for interface in $interfaces; do
+              ip_address=$(ip addr show $interface | grep -oP '(?<=inet\s)\d+(\.\d+){3}')
+          done
+          url="https://api.zerotier.com/api/v1/network/$ZEROTIER_ID/member"
+          json_response=$(curl -s -X GET -H "Authorization: token $ZEROTIER_TOKEN" "$url")
+          echo "$json_response" | jq -c '.[]' | while read -r obj; do
+              zero_ip=$(echo "$obj" | jq -r '.config.ipAssignments[0]')
+              if [ "$ip_address" = "$zero_ip" ]; then
+                  nodeId=$(echo "$obj" | jq -r '.nodeId')
+                  urls="https://api.zerotier.com/api/v1/network/$ZEROTIER_ID/member/$nodeId"
+                  json_response=$(curl -s -X DELETE -H "Authorization: token $ZEROTIER_TOKEN" "$urls")
+                  echo $json_response
+              else
+                  echo "Strings are not equal"
+              fi
+          done
       - name: mv /mnt/r68s/bin/targets/rockchip/armv8/*.img.gz
         run: |
           ls -l /mnt/r68s/bin/targets/rockchip/armv8/
