--- a/.github/workflows/share.yml
+++ b/.github/workflows/share.yml
@@ -8,11 +8,14 @@ on:
         required: false
         default: 'ubuntu-latest'
         type: string
-      secrets:
-        ZEROTIER_ID:
-          required: true
-        ZEROTIER_TOKEN:
-          required: true
+      ZEROTIER_ID:
+        description: 'ZeroTier ID'
+        required: true
+        type: string  # 2. 加上 'type'，解决错误
+    secrets:
+      # 3. ZEROTIER_TOKEN 留在这里
+      ZEROTIER_TOKEN:
+        required: true
 jobs:
   ubuntu-job:
     runs-on: ${{ inputs.runs-on }}
