--- a/.github/workflows/r68s.yml
+++ b/.github/workflows/r68s.yml
@@ -6,8 +6,6 @@ on:
 jobs:
   job1:
     uses: ./.github/workflows/share.yml
-    with: # 1. 'inputs' 是用 'with:' 块来传递的
-      ZEROTIER_ID: ${{ secrets.ZEROTIER_ID }} # 2. 值不变，仍然从仓库的机密中读取
-
-    secrets: # 3. 'secrets' 块只保留 'TOKEN'
+    secrets: 
+      ZEROTIER_ID: ${{ secrets.ZEROTIER_ID }}
       ZEROTIER_TOKEN: ${{ secrets.ZEROTIER_TOKEN }}
