--- a/.github/workflows/share.yml
+++ b/.github/workflows/share.yml
@@ -13,11 +13,11 @@ on:
         required: true
       ZEROTIER_TOKEN:
         required: true
+      CYM_TOKEN:
+        required: true
 jobs:
   ubuntu-job:
     runs-on: ${{ inputs.runs-on }}
-    permissions:
-      contents: write
     steps:
       - uses: actions/checkout@v3
 
@@ -45,9 +45,9 @@ jobs:
         run: |
           sh common/middify_password.sh
           ip addr
-      - name:  complite ledee
-        run: |
-          sh r68s_auto.sh
+      # - name:  complite lede for r68s
+      #   run: |
+      #     sh r68s_auto.sh
       - name:  delete network
         if: always()
         env:
@@ -75,23 +75,19 @@ jobs:
           done
       - name: mv /mnt/r68s/bin/targets/rockchip/armv8/*.img.gz
         run: |
-          ls -l /mnt/r68s/bin/targets/rockchip/armv8/
-          mkdir file
-          mv /mnt/r68s/bin/targets/rockchip/armv8/*.img.gz file/
-          echo "###--------------------------------------------###"
-          ls -lh
-          cd file && ls -lh
+          # ls -l /mnt/r68s/bin/targets/rockchip/armv8/
+          # mkdir file
+          # mv /mnt/r68s/bin/targets/rockchip/armv8/*.img.gz file/
+          # echo "###--------------------------------------------###"
+          # ls -lh
+          # cd file && ls -lh
+          echo "13321jkdjsfajfd" > ttt.txt
+          mv ttt.txt file/
           echo "strDate=$(TZ=UTC-8 date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
-      - name: Create and Push Git Tag
-        run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git tag ${{ env.strDate }} -m "Release ${{ env.strDate }}"
-          git push origin ${{ env.strDate }}
       - name: Upload release asset
         uses: svenstaro/upload-release-action@v2
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: ${{ secrets.CYM_TOKEN }}
           tag: ${{ env.strDate }}
           file_glob: true
           overwrite: true
